[gd_scene load_steps=10 format=3 uid="uid://cvu135vv0vgue"]

[ext_resource type="Texture2D" uid="uid://c4xgh52byjoko" path="res://ASSETS/Art/anemone/Anemone.png" id="1_7ndqj"]
[ext_resource type="Script" path="res://SCRIPTS/anemone.gd" id="1_rgnfp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_avl1i"]
atlas = ExtResource("1_7ndqj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv132"]
atlas = ExtResource("1_7ndqj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n2l3"]
atlas = ExtResource("1_7ndqj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dny1"]
atlas = ExtResource("1_7ndqj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5vxgp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_avl1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv132")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n2l3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dny1")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ljv2p"]
radius = 17.0

[sub_resource type="CircleShape2D" id="CircleShape2D_x274o"]
radius = 20.0

[node name="Anemone" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 12
script = ExtResource("1_rgnfp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_5vxgp")
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_ljv2p")

[node name="AttackRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_x274o")

[node name="AttackTimer" type="Timer" parent="AttackRadius"]

[connection signal="body_entered" from="AttackRadius" to="." method="_on_attack_radius_body_entered"]
[connection signal="body_exited" from="AttackRadius" to="." method="_on_attack_radius_body_exited"]
[connection signal="timeout" from="AttackRadius/AttackTimer" to="." method="_on_attack_timer_timeout"]
